kubectl/traefik/traefik-service-monitor.yaml
apiVersion: v1
kind: Service
metadata:
  name: traefik-dashboard
  namespace: kube-system
spec:
  selector:
    app: traefik
  ports:
    - port: 9000
      targetPort: traefik
